Integrated with Slick for persistance

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,1 +1,29 @@
 # https://www.playframework.com/documentation/latest/Configuration
+play {
+  modules {
+    enabled += modules.EnvironmentModule
+  }
+
+  evolutions {
+    autoApply = true
+  }
+
+  filters {
+    enabled = []
+  }
+}
+
+slick {
+  dbs {
+    default {
+      profile = "slick.jdbc.PostgresProfile$"
+
+      db {
+        driver = org.postgresql.Driver
+        url = ${POSTGRES_URL}
+        user = ${POSTGRES_USER}
+        password = ${POSTGRES_PASSWORD}
+      }
+    }
+  }
+}
