--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,17 +1,4 @@
-# https://www.playframework.com/documentation/latest/Configuration
-play {
-  modules {
-    enabled += modules.EnvironmentModule
-  }
-
-  evolutions {
-    autoApply = true
-  }
-
-  filters {
-    enabled = []
-  }
-}
+include "application.common.conf"
 
 slick {
   dbs {
