--- a/conf/application.conf
+++ b/conf/application.conf
@@ -3,13 +3,11 @@ include "application.common.conf"
 slick {
   dbs {
     default {
-      profile = "slick.jdbc.PostgresProfile$"
+      profile = "slick.jdbc.H2Profile$"
 
       db {
-        driver = org.postgresql.Driver
-        url = ${POSTGRES_URL}
-        user = ${POSTGRES_USER}
-        password = ${POSTGRES_PASSWORD}
+        driver = org.h2.Driver
+        url = "jdbc:h2:mem:play;MODE=PostgreSQL;DB_CLOSE_DELAY=-1;DATABASE_TO_UPPER=false"
       }
     }
   }
